[metadata]
name ='ppb_lakitu',
author ='Piper Thunstrom',
author_email = 'pathunstrom@gmail.com',
description = 'An automated camera for ppb.'
long_description = file: README.md
long_description_content_type = text/markdown
url='https://github.com/pathunstrom/ppb-lakitu'
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: Artistic License
    Natural Language :: English
    Topic :: Games/Entertainment
    Typing :: Typed

[options]
packages =
    ppb_lakitu
setup_requires =
    ppb
    setuptools_scm
    setuptools_scm_git_archive

[options.extras_require]
tests =
    pytest
release =
    wheel
    twine
docs =
    sphinx
    sphinx_rtd_theme
